# MedToExcel

./: !2024-02-29  .gitignore  C1_190324  Cx5-REP3-FR4-SEQ (tempo).MPC  FAP_analysis.py  FAP_analysis_mean.py  H1_171022  L1_020424_sessão1.unknown  LICENSE  MainWindow.py  README.md  Selector.py  apagar.py  main.py  main.spec  med_to_excel.py  pyproject.toml  pyproject_poetry.toml  requirements.txt  variability.py
examples/data/: crivo.txt
exemples/: L1_190324
med_to_excel/core/: med_to_excel.py
med_to_excel/core/utils/: copy.py  correct_response_time.py  correct_sequence_time.py  different_sequences.py  duration.py  latency.py  mean_fap_analysis.py  percentage_correct_sequences.py  recorrence.py  rng.py  switches.py  trial_duration.py  u_value.py
med_to_excel/gui/: main_window.py
med_to_excel/gui/analysis/: fap_analysis.py  fap_analysis_mean.py  variability.py
med_to_excel/gui/widgets/: selector.py
planilhas/: latency - L1_020424_sessão1.unknown.xlsx  sequence duration - L1_020424_sessão1.unknown.xlsx  trial duration - L1_020424_sessão1.unknown.xlsx
src/: Copy.py  Correct_response_time.py  Correct_sequence_time.py  Correct_sequence_time_backup.py  Different_sequences.py  Duration.py  Duration_backup.py  Error_log.py  Latency.py  Percentage_correct_sequences.py  Recorrence.py  Switches.py  Trial_duration.py  U_Value.py  duration.txt  latency.txt  mean_fap_analysis.py  rng.py  trial_duration.txt  universe.py  universe_dict.py
