[project]
name = "medtoexcel"
version = "0.1.0"
description = ""
authors = [
    {name = "Fábio Henrique",email = "psifabiohenrique@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyqtdarktheme (>=2.1.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyinstaller = "^6.12.0"

