[tool.poetry]
name = "med-to-excel"
version = "0.1.0"
description = "Aplicativo para análise de dados de pesquisas comportamentais"
authors = ["Fábio Henrique <psifabiohenrique@outlook.com>"]
readme = "README.md"
packages = [{include = "med_to_excel"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "^6.6.1"
pyqtdarktheme = "^2.1.0"
numpy = "^1.26.3"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
