[project]
name = "medtoexcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
